update to build against keycloak 26.2.4